Trip History:  - Implement trip data export to CSV.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,7 +40,9 @@
             </intent-filter>
         </activity>
 
-        <service android:name=".feature.tracking.LocationService" android:foregroundServiceType="location"/>
+        <service
+            android:name=".feature.tracking.LocationService"
+            android:foregroundServiceType="location" />
     </application>
 
 </manifest>
