--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_LOCATION" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION" />
 
     <application
         android:name=".MyApplication"
@@ -43,6 +44,10 @@
         <service
             android:name=".feature.tracking.LocationService"
             android:foregroundServiceType="location" />
+
+        <receiver
+            android:name=".feature.tracking.ActivityRecognitionReceiver"
+            android:exported="true" />
     </application>
 
 </manifest>
